--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -39,6 +39,6 @@
     ]
   },
   "devDependencies": {
-    "netlify-cli": "^7.0.2"
+    "netlify-cli": "^2.71.0"
   }
 }
